# Recommended method in https://matklad.github.io/2021/08/22/large-rust-workspaces.html
[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Tancrède Lepoint"]
documentation = "https://fhe.rs"
edition = "2021"
repository = "https://github.com/tlepoint/fhe.rs"
version = "0.1.0-beta.7"
license-file = "LICENSE"
rust-version = "1.73"

[workspace.dependencies]
console = "0.15.7"
criterion = "0.5.1"
doc-comment = "0.3.3"
ethnum = "1.5.0"
indicatif = "0.17.7"
itertools = "0.12.0"
ndarray = { version = "0.15.6", default-features = false, features = ["serde"] }
num-bigint-dig = { version = "0.8.4", default-features = false }
num-bigint = { version = "0.4.6", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
prime-number-utils = "0.1.0"
prime_factorization = "1.0.5"
proptest = "1.4.0"
prost = "0.12.3"
prost-build = "0.12.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
sha2 = "0.10.8"
thiserror = "1.0.50"
zeroize = "1.7.0"
zeroize_derive = "1.4.2"
serde = { version = "1.0.197", default-features = false, features = ["derive", "rc"] }
