[package]
name = "fhe-util"
description = "Utilities for the fhe.rs library"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
itertools.workspace = true
num-bigint-dig = { workspace = true }
num-traits.workspace = true
prime-number-utils.workspace = true
prime_factorization.workspace = true
rand.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true
